# University

./: .gitignore  Cartel1.xlsx  Lez 28-03  README.md  convert.sh
FIDT/: ~$punti di Filosofia della Tecnica.docx
ISW2/: ~$baseSlideISPW2".pptx
MA/: Report homework2.md  lez-04-Stack.md
MA/md files/: Malware Analysis.md  convert.sh  lez 12 - 2 novembre 2023 - strumenti analisi.md  lez dal 2 novembre 2023.md  lez-03.md
ML/: 4-end2end.ipynb  Lez8_ML 8 novembre 2023.md  ML 25 OTT.md
ML/osservazioni/: math-stuff.md
MPSMF/: .Rhistory  21-03-23 mercati  LEZIONE 17-03   Lezione 18-04  Time Series Examples - Bonds-Options-01-Pub.R
MPSMF/Lezioni/: Lez 15 - 2:05:23.md  Lez 27.md
MPSMF/Time Series in R/: .RData  .Rhistory  SPX_Option_Chain_2023_06_16.csv  Time Series Examples - Bonds-Options-02-Pub.R  daily-treasury-rates-2023.csv  securityprice-2023-01-03.csv  securityprice-2023-04-11.csv
NSD/: 3.Hardware-based Attacks and Countermeasures.md  kathara lstart con tmux.txt
NSD/Appunti vari/: Domande NSD.md
PCMNS/nuovi/: lect1INTRO
PMCSN/2023/: lect23RetiMarkov.md  lect24Ex.md  lect24ProductForm.md  lect26debMVA.md  lect27exLavagna.md  lect29-Bound & Bottleneck.md  lect29EX  lect30Ex.md  (+1 more)
SERT/: Riassunti SERT - parte EMBEDDED.md
SOA/: Sistemi Operativi Avanzati.md  TLS - solution.md  command.txt  producepdf.sh
vecchie/PMCSN/2023/Lezione Pellegrini/pcs-example/: CMakeLists.txt
vecchie/PMCSN/2023/Lezione Pellegrini/pcs-example/core/: calqueue.h  scheduler.c
vecchie/PMCSN/2023/Lezione Pellegrini/pcs-example/model/: ROOT-Sim.h  pcs.h  rng.h  rngs.c
(+231 files in other folders)
